Add sushi website modified

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/sushi.png" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Sushiman</title>
+    <title>Sushimania</title>
   </head>
   <body>
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4 data-aos="fade-down">Sushiman</h4>
+          <h4 data-aos="fade-down">Sushimania</h4>
           <div class="header__logo-overlay"></div>
         </div>
 
@@ -138,7 +138,7 @@
       <div class="popular-foods__catalogue" data-aos="fade-up">
         <article class="popular-foods__card">
           <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
-          <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+          <h4 class="popular-foods__card-title">Cheese Sushi</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -146,13 +146,13 @@
               <p>4.9</p>
             </div>
 
-            <p class="popular-foods__card-price">$21.00</p>
+            <p class="popular-foods__card-price">200.00</p>
           </div>
         </article>
 
         <article class="popular-foods__card active-card">
           <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11" />
-          <h4 class="popular-foods__card-title">Original Sushi</h4>
+          <h4 class="popular-foods__card-title">Sushi</h4>
           
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -160,13 +160,13 @@
               <p>5.0</p>
             </div>
             
-            <p class="popular-foods__card-price">$19.00</p>
+            <p class="popular-foods__card-price">250.00</p>
           </div>
         </article>
 
         <article class="popular-foods__card">
           <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10" />
-          <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+          <h4 class="popular-foods__card-title">Ramen</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -174,7 +174,7 @@
               <p>4.7</p>
             </div>
 
-            <p class="popular-foods__card-price">$13.00</p>
+            <p class="popular-foods__card-price">$250.00</p>
           </div>
         </article>
       </div>
