Add sushi portf

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <p>4.9</p>
             </div>
 
-            <p class="popular-foods__card-price">200.00</p>
+            <p class="popular-foods__card-price">₱200.00</p>
           </div>
         </article>
 
@@ -160,7 +160,7 @@
               <p>5.0</p>
             </div>
             
-            <p class="popular-foods__card-price">250.00</p>
+            <p class="popular-foods__card-price">₱250.00</p>
           </div>
         </article>
 
@@ -174,7 +174,7 @@
               <p>4.7</p>
             </div>
 
-            <p class="popular-foods__card-price">$250.00</p>
+            <p class="popular-foods__card-price">₱250.00</p>
           </div>
         </article>
       </div>
@@ -271,7 +271,7 @@
   
           <h3 class="sushi__title">Japanese Drinks
           </h3>
-          <p class="sushi__description">Feel the taste of the most delicious Japense drinks here.
+          <p class="sushi__description">Feel the taste of the most delicious Japense drinks here!.
           </p>
   
           <ul class="trending__list flex-between">
