--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   
           <h3 class="sushi__title">Japanese Sushi
           </h3>
-          <p class="sushi__description">Feel the taste of the most delicious Sushi here.
+          <p class="sushi__description">Feel the taste of the most delicious Sushi here!
           </p>
   
           <ul class="trending__list flex-between">
@@ -267,7 +267,7 @@
         </div>
 
         <div class="trending__content" data-aos="fade-left">
-          <p class="sushi__subtitle">What’s Trending / トレンド</p>
+          <p class="sushi__subtitle">What’s Trending? / トレンド</p>
   
           <h3 class="sushi__title">Japanese Drinks
           </h3>
